--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "ember-cli": "~3.8.1",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.1.2",
-    "ember-cli-code-coverage": "github:lifeart/ember-cli-code-coverage#patch-2",
+    "ember-cli-code-coverage": "github:nsf-open/ember-cli-code-coverage#fe27b61f754b575f1cd15691b747c66b43dae964",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^4.2.3",
     "ember-cli-htmlbars": "^3.0.0",
